--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ passlib[bcrypt]==1.7.4
 openai==1.3.7
 python-dotenv==1.0.0
 httpx==0.25.2
+requests==2.31.0
 aiofiles==23.2.1
 email_validator==2.1.0
 chromadb==0.4.18
